samples/_failures_safe/1761256980_61b6f3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c9f2a11a.c: In function ‘main’:
./samples/SAFE/__tmp_c9f2a11a.c:142:5: error: expected expression at end of input
  142 |     if (len > 0 && input_text[len -
      |     ^~
./samples/SAFE/__tmp_c9f2a11a.c:142:5: error: expected declaration or statement at end of input
